// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Oracles add oracle succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 52467,
}
`;

exports[`Oracles remove oracle decreases required oracles 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 36944,
}
`;

exports[`Oracles remove oracle succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 32761,
}
`;

exports[`Oracles set required oracles succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 31838,
}
`;

exports[`Oracles verify oracles all signatures succeeds with all signatures 1`] = `75186`;

exports[`Oracles verify oracles min signatures succeeds with all signatures 1`] = `44758`;

exports[`Oracles verify oracles min signatures succeeds with required signatures 1`] = `44697`;
